--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,13 @@ rdiscount:
 exclude: ["README.md", "TODO.md"]
 include: ["42"]
 
+# My configuration
+
+domain: unacinux.github.com
+title: Unacinux
+author: unacinux
+description: Unacinux homepage
+
 # Configuration for ehancements
 
 google_analytics:
